discussion/kv_engine/142736/142736_rev38_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Remove interfaces from memcached.json [3/3]

This patch removes the old definition of interfaces through
memcached.json

Change-Id: If56d95b7ea8ee6086c6c4d80c3aea536a4a7fc9a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-14 05:57:50.000000000
Message: 
Uploaded patch set 38: Patch Set 37 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 06:54:21.000000000
Message: 
Patch Set 38: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36819/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0042/0157]: file stats post warmup...(18 ms) SKIPPED


99% tests passed, 1 tests failed out of 407

Total Test time (real) = 947.01 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36819/ )

Timeout of a CTest test 407/407 Test #254: ep_testsuite.ephemeral.comp_active ............................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36819/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9835/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9835/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9835/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8423/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/346/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31458/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11405/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11556/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11831/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10485/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19418/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
